- Fixed logic that switched light and dark modes - Added colors for dark mode

--- a/client/src/css/overview.css
+++ b/client/src/css/overview.css
@@ -48,6 +48,7 @@
 .thumbnails-arrow {
   border-radius: 3px;
   padding: 3px;
+  background-color: var(--color-neutral-lighter-transparent);
 }
 
 .gallery-thumbnail-container {
